@startuml

title __CS665's Class Diagram__\n

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Board {
        + initial : char[][]
        + getInitial()
        + showBoard()
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Main {
        {static} + main()
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Player {
        {static} + matrix1 : int[][]
        {static} + matrix2 : int[][]
        + getMatrix1()
        + getMatrix2()
        + placeShip()
        - place()
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Shoot {
        ~ endNot : boolean
        ~ h1 : char[][]
        ~ h2 : char[][]
        ~ hit1 : int
        ~ hit2 : int
        ~ matrix11 : int[][]
        ~ matrix22 : int[][]
        {static} - obj : Shoot
        {static} + getInstance()
        + playerShoot()
        - Shoot()
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Shoot.ShotPlace {
        + invoke1()
        + invoke2()
    }
  }
  

  edu.bu.met.cs665.Shoot o-- edu.bu.met.cs665.Board : b
  edu.bu.met.cs665.Shoot o-- edu.bu.met.cs665.Player : p
  edu.bu.met.cs665.Shoot o-- edu.bu.met.cs665.Board : с
  edu.bu.met.cs665.Shoot +-down- edu.bu.met.cs665.Shoot.ShotPlace


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
